added pricing page images and planner section

--- a/assets/sass/base/buttons.scss
+++ b/assets/sass/base/buttons.scss
@@ -8,6 +8,7 @@
 	border: $border-width solid transparent;
 	border-radius: 10rem;
 	display: inline-block;
+	font-weight: 500;
 	line-height: 1;
 	padding: 1.5rem 2.5rem;
 	transition: background $speed ease,
