--- a/assets/sass/pages/case-study/case-studies/adspy.scss
+++ b/assets/sass/pages/case-study/case-studies/adspy.scss
@@ -61,26 +61,32 @@
 	}
 
 	.case-study__logo__button--pri {
+		animation: scaleIn $speed $speed * 2 both;
 		background: $adspy-pri;
 	}
 
 	.case-study__logo__button--sec {
+		animation: scaleIn $speed $speed * 1.5 both;
 		background: $adspy-sec;
 	}
 
 	.case-study__logo__button--ter {
+		animation: scaleIn $speed $speed both;
 		background: $adspy-ter;
 	}
 
 	.case-study__colours__item--pri {
+		animation: scaleIn $speed $speed both;
 		background: linear-gradient( to right, $adspy-pri 50%, $adspy-pri-alt 50% );
 	}
 
 	.case-study__colours__item--sec {
+		animation: scaleIn $speed $speed * 1.5 both;
 		background: linear-gradient( to right, $adspy-sec 50%, $adspy-sec-alt 50% );
 	}
 
 	.case-study__colours__item--ter {
+		animation: scaleIn $speed $speed * 2 both;
 		background: linear-gradient( to right, $adspy-ter 50%, $adspy-ter-alt 50% );
 	}
 
