--- a/assets/sass/pages/case-study/case-studies/adspy.scss
+++ b/assets/sass/pages/case-study/case-studies/adspy.scss
@@ -7,6 +7,7 @@
 .case-study--adspy {
 	.case-study__cover {
 		background: url( '../../img/background/city-background.svg' ) center bottom repeat-x;
+		background-size: 72rem 32rem;
 	}
 
 	.case-study__cover__logo {
@@ -109,7 +110,7 @@
 @include respond-max( $mq-medium ) {
 	.case-study--adspy {
 		.case-study__cover {
-			background-size: 75%;
+			background-size: 54rem 24rem;
 		}
 	}
 }
