--- a/Views/Master.cshtml
+++ b/Views/Master.cshtml
@@ -1,13 +1,15 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage
 @{
     Layout = null;
+    var site = CurrentPage.Site();
+    var settings = site.Children("Settings");
 }
 
 <!DOCTYPE html>
 <!--[if lte IE 9]> <html lang="en" class="no-mustard no-js lt-ie10"> <![endif]-->
-<!--[if gt IE 9]><!--> <html lang="en" class="no-mustard no-js"> <!â€”<![endif]-->
+<!--[if gt IE 9]><!--> <html lang="en" class="no-mustard no-js"> <!--<![endif]-->
 <head>
-	<title>Header</title>
+	<title>@CurrentPage.Name | geckotree</title>
 	<!--[if lt IE 9]>
 		<script src="/assets/_components/html5shiv/dist/html5shiv.min.js"></script>
 		<link rel="stylesheet" href="/assets/_build/css/ie.css">
