--- a/Views/Master.cshtml
+++ b/Views/Master.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = null;
     var site = CurrentPage.Site();
-    var settings = site.Children("Settings");
+    var settings = site.FirstChild("Settings");
 }
 
 <!DOCTYPE html>
