--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -40,7 +40,9 @@ Authors: 	Rob Simpson & Kev Simpson
 
 @import 'components/nav',
 		'components/footer',
-		'components/carousel';
+		'components/carousel',
+		'components/listing',
+		'components/listing-image';
 
 @import 'pages/case-study/section',
 		'pages/case-study/cover',
