Nav - Add active class to current page

--- a/Views/Partials/page/nav-main.cshtml
+++ b/Views/Partials/page/nav-main.cshtml
@@ -12,7 +12,7 @@
 				var item = Umbraco.Content(id);
 
 				<li class="nav__item">
-					<a href="@item.Url" class="nav__link @( item.Name == "Planner" ? "button--primary" : "" )">@item.Name
+					<a href="@item.Url" class="nav__link @(item.Name == "Planner" ? "button--primary" : "") @(item.IsAncestorOrSelf(CurrentPage) ? "active" : null)">@item.Name
 						@Html.Raw(item.NavIcon)
 					</a>
 				</li>
