--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -30,8 +30,7 @@ Authors: 	Rob Simpson & Kev Simpson
 		'base/lists',
 		'base/forms',
 		'base/tables',
-		'base/media',
-		'base/icons';
+		'base/media';
 
 @import 'layout/page',
 		'layout/wrap',
