Updated project readme

--- a/assets/sass/components/nav.scss
+++ b/assets/sass/components/nav.scss
@@ -379,6 +379,10 @@
 	.nav__search-toggle {
 		padding: 1rem 1.6rem;
 
+		.icon path {
+			transition: fill $speed ease;
+		}
+
 		&:hover {
 			.icon path {
 				fill: $sec;
